[gd_scene load_steps=7 format=3 uid="uid://cdmpdisglei4v"]

[ext_resource type="Texture2D" uid="uid://c6epp6dmb5v1k" path="res://Assets/Graphics/Square.png" id="1_7k3k3"]
[ext_resource type="Script" path="res://Scenes/Ball.gd" id="1_r101t"]
[ext_resource type="AudioStream" uid="uid://bnj355rhh6wh8" path="res://Assets/Audio/beep-7.wav" id="3_cv3h7"]
[ext_resource type="AudioStream" uid="uid://7o22lwo14f6i" path="res://Assets/Audio/beep-29.wav" id="4_74tag"]
[ext_resource type="AudioStream" uid="uid://bwub6mgnrvutf" path="res://Assets/Audio/beep-5.wav" id="5_tuyup"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8xbd"]
size = Vector2(12, 12)

[node name="Ball" type="Node2D"]
script = ExtResource("1_r101t")

[node name="BallImage" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_7k3k3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_w8xbd")

[node name="AudioStreamPaddleCollision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_cv3h7")

[node name="AudioStreamUpDownCollision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_74tag")

[node name="AudioStreamScore" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_tuyup")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
